--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ section {
   --Patua: "Patua One", cursive;
   --Lobster: "lobster", cursive;
   --light-black: #2e2c2caf;
-  --bggradient: linear-gradient(to bottom, #16e774, #2fff52);
+  --bggradient: linear-gradient(to bottom, #0f924a, #2fff52);
   --light-gray: rgba(255, 255, 255, 0.877);
 }
 
